# estou_aqui

./: pyproject.toml  requirements.txt
app/: __init__.py  constants.py
app/models/: geo_localization.py
app/routes/: index.py  localizacao_atual.py  nps.py
app/static/css/: maps_geo.css  nav-bar.css
app/templates/: alerts.html  geo_localizacao.html  index.html  modal.html  nps.html
